# simulador

./: .gitignore  CMakeLists.txt  NEG_LAYOUT_english.txt  OFER_CPA_LAYOUT_english.txt  OFER_VDA_LAYOUT_english.txt  OFER_VDA_LAYOUT_portuguese.txt  README.md  book_history_1698359197.csv  config.json
book-data/: book_history_1698368035.csv  book_history_1698431553.csv
data/b3/20191220/: INDEX_STOCK_FILES.json
data/b3/20191220/PROCESSED/: OFER_CPA_BMF_20191220_00_processed.json  OFER_CPA_BMF_20191220_01_processed.json  OFER_CPA_BMF_20191220_02_processed.json  OFER_CPA_BMF_20191220_03_processed.json  OFER_CPA_BMF_20191220_04_processed.json  OFER_CPA_BMF_20191220_05_processed.json  OFER_CPA_BMF_20191220_06_processed.json  OFER_CPA_BMF_20191220_07_processed.json  OFER_CPA_BMF_20191220_08_processed.json  OFER_CPA_BMF_20191220_09_processed.json  OFER_CPA_BMF_20191220_10_processed.json  OFER_CPA_BMF_20191220_11_processed.json  OFER_CPA_BMF_20191220_12_processed.json  OFER_CPA_BMF_20191220_13_processed.json  OFER_CPA_BMF_20191220_14_processed.json  OFER_CPA_BMF_20191220_15_processed.json  OFER_VDA_BMF_20191220_00_processed.json  OFER_VDA_BMF_20191220_01_processed.json  OFER_VDA_BMF_20191220_02_processed.json  OFER_VDA_BMF_20191220_03_processed.json  OFER_VDA_BMF_20191220_04_processed.json  OFER_VDA_BMF_20191220_05_processed.json  OFER_VDA_BMF_20191220_06_processed.json  OFER_VDA_BMF_20191220_07_processed.json  OFER_VDA_BMF_20191220_08_processed.json  OFER_VDA_BMF_20191220_09_processed.json  OFER_VDA_BMF_20191220_10_processed.json
data/b3/20191220/PROCESSED/COMPILED/: B3_COMPILED_DATA.json  B3_NEG_DATA.json
include/: ArrayUtils.h  ClientResponseSender.h  Clock.h  Config.h  Context.h  DataService.h  Datautils.h  Event.h  EventFieldsEnum.h  EventService.h  FileDataStockInfo.h  LogService.h  MetricsSystem.h  Order.h  OrderFieldsEnum.h  OrderService.h  OrderSimp.h  OrderStatuses.h  OrderUtils.h  PurchaseOffer.h  PurchaseOrder.h  SaleOffer.h  SaleOrder.h  Semaphore.h  Server.h  ServerResponseSender.h  StockDataInfo.h  StockInfo.h  StockMarketVolume.h  StringUtils.h  Trader.h  TraderStockPosition.h
plot-data/book-heatmap/: volume_1698438692.csv
plot-data/book-history/: book_history_1698431553.csv
scripts/: tmp.txt
scripts/b3/: 01_chunk_data_analysis.py  02_compile_data_information.py  03_negotiations_data_analysis.py  04_plot_stock_negotiations_price_history.py  05_index_stock_by_file.py  06_plot_n_stock_negotiations.py  07_log_negotiations.py  08_plot_execution_history.py  10_sort_file_data_per_stock.py  11_negotiations_debug_analysis.py  12_book_history_plot.py
scripts/b3/data-analysis/: 00_split_data_into_chunks.py  01_chunk_data_analysis.py  03_negotiations_data_analysis.py
scripts/b3/data-plot/: 00_plot_stock_negotiations_price_history.py  01_plot_n_stock_negotiations.py  02_plot_execution_history.py  03_plot_negotiations_comparison.py  04_plot_book_history.py  05_datashader_book_vs_time.py
scripts/b3/data-sort/: 01_order_per_range.py  02_sort_file_data_per_stock.py  03_concat_files.py
scripts/market-client/: book.py  client.py  filehandler.py  homebroker.py  main.py  monitor.py  plotlibserver.py  select.py  trader_account.py
scripts/simulations/: plot_price_history.py
src/: ClientResponseSender.cpp  Clock.cpp  Config.cpp  Context.cpp  DataService.cpp  Event.cpp  EventService.cpp  LogService.cpp  MetricsSystem.cpp  Order.cpp  OrderService.cpp  PurchaseOffer.cpp  PurchaseOrder.cpp  SaleOffer.cpp  SaleOrder.cpp  Semaphore.cpp  Server.cpp  ServerResponseSender.cpp  Trader.cpp  main.cpp
utils/: ArrayUtils.cpp  DataUtils.cpp  OrderUtils.cpp  StringUtils.cpp
